objects/AccountWithTimeline__c.object
<CustomObject>
    <description>This object represent Accounts with analytics</description>
    <fields>
        <fullName>Current_NX_Maintenance_and_MR__c</fullName>
        <label>Current NX Maintenance and MR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Perpetual_VRX_Maintenance_and_MR__c</fullName>
        <label>Current Perpetual VRX Maintenance and MR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Perpetual_VX_Maintenance_and_MR__c</fullName>
        <label>Current Perpetual VX Maintenance and MR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_VRX_Subscription_and_SR__c</fullName>
        <label>Current VRX Subscription and SR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_VX_Subscription_and_SR__c</fullName>
        <label>Current VX Subscription and SR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Of_Maintenance__c</fullName>
        <label>End Of Maintenance</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_NX_Order__c</fullName>
        <label>First NX Order</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Order_Amt__c</fullName>
        <label>First Order Amt</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>First_Order__c</fullName>
        <label>First Order</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_VRX_Perp_Order__c</fullName>
        <label>First VRX Perpetual Order</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_VRX_Subs_Order__c</fullName>
        <label>First VRX Subscription Order</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_VX_Perp_Order__c</fullName>
        <label>First VX Perpetual  Order</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_VX_Subs_Order__c</fullName>
        <label>First VX Subscription Order</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Year_Total__c</fullName>
        <label>First Year Total</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GMS__c</fullName>
        <label>GMS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GX__c</fullName>
        <label>GX</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LARGE__c</fullName>
        <label>LARGE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Order_Amt__c</fullName>
        <label>Last Order Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Order_Date__c</fullName>
        <label>Last Order Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MEDIUM__c</fullName>
        <label>MEDIUM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NX_Sales__c</fullName>
        <label>NX Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NX__c</fullName>
        <label>NX</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>AccountsWithTimeline</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Ninety_Days_Total__c</fullName>
        <label>90 days Total</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_VRX_Subscription_and_SR__c</fullName>
        <label>Previous VRX Subscription and SR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_VX_Subscription_and_SR__c</fullName>
        <label>Previous VX Subscription and SR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMALL__c</fullName>
        <label>SMALL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Sales__c</fullName>
        <label>Total Sales</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UltimateParentName__c</fullName>
        <label>Ultimate Parent Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UltimateParent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ultimate Parent</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>AccountsWithTimeline1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VRX_Perpetual_Sales__c</fullName>
        <label>VRX Perpetual Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VRX_Subscription_Sales__c</fullName>
        <label>VRX Subscription Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VRX__c</fullName>
        <label>VRX</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VX_Perpetual_Sales__c</fullName>
        <label>VX Perpetual Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VX_Subscription_Sales__c</fullName>
        <label>VX Subscription Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VX__c</fullName>
        <label>VX</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Timeline</label>
    <nameField>
        <label>Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Timelines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>